css/style.css
* {
  padding: 0%;
  margin: 0%;
}

body {
  overflow-y: hidden;
}

/* -------------------------------------------------------------------------------------------------------------- */
/* Generic Text Styling */
p, span, h1, h3, button {
  font-family: 'Roboto', sans-serif;
}

.bold-txt {
  font-weight: bold;
}

/* -------------------------------------------------------------------------------------------------------------- */
/* Course Navigation Page */
#navigation-page {
  display: flex;
  flex-direction: row;

  width: 100vw;
  height: 100vh;

  background-color: #779443;

  overflow-y: hidden;
}

/* -------------------------------------------------------------------------------------------------------------- */
/* Nav Bar */
.vertical-navigation-bar {
  /* background-color: black; */
  box-sizing: border-box;
  background-color: white;

  display: flex;
  flex-direction: column;
  flex-grow: 0;
  align-items: center;

  width: auto;
  max-width: 20%;
  height: 100vh;
}

#sweepstakes-logo {
  width: auto;
  height: 33.3vh;

  /* padding: 0px, 3%, 3%, 10px;
  border-bottom: 3px solid black; */
}

#navigation-info {
  box-sizing: border-box;
  font-weight: 400;
  font-size: 24px;
  padding: 5% 12% 12% 20%;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

#info-icon {
  width: auto;
  min-height: 20px;
  max-height: 7%;
}

.info-txt {
  padding-bottom: 3%;
}

.start-course {
  box-sizing: border-box;
  background-color: #565656;
  width: 100%;

  flex-grow: 1;
  display: flex;
  flex-direction: column;

  padding-left: 20%;
  padding-right: 20%;
  padding-bottom: 5%;

  justify-content: space-around;
}

.ready-set-go {
  font-weight: 600;
  font-size: 50px;

  text-align: center;
  color: white;
}

a.button {
  text-decoration: none;
}

#go-button {
  background-color: #466db4;
  margin-left: 2%;
  margin-right: 2%;

  height: fit-content;

  filter: drop-shadow(4px 6px 2px #454545);
}

#go-button:hover {
  background-color: #6a8dc8;
}

/* -------------------------------------------------------------------------------------------------------------- */
/* Interactive Course Map Display */
#map-view {
  box-sizing: border-box;
  flex-grow: 1;

  height: auto;
  width: auto;

  display: flex;
  justify-content: center;

  position: relative;
}

#map-with-checkpoints {
  position: relative;
  width: fit-content;
  margin: auto;
}

#course-img {
  height: auto;
  width: 1200px;
}

.checkpoint-marker {
  position: absolute;

  box-sizing: border-box;
  width: 40px;
  height: 40px;

  border-radius: 50%;

  background-color: black;
  text-align: center;

  display: flex;
  justify-content: center;
  align-items: center;

  filter: drop-shadow(2px 3px 1px #454545);
}

.checkpoint-marker:hover {
  background-color: #3b3b3b;
}

.marker-txt {
  color: white;

  font-weight: bold;
  font-size: 25px;
}

.map-overlay {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;

  position: absolute;

  left: 33.75%; 
  bottom: 30%;
  z-index: 10;

  /* width: 347px;
  height: 235px; */

  width: 27%;
  height: 20%;

  min-height: 200px;
  max-width: 300px;

  text-align: center;

  padding: 2%;

  background-color: #e8ebe3;

  justify-content: space-around;
  align-items: center;
}

.map-hover-title {
  font-size: 46px;
  font-weight: 900;

  border: solid;
  border-color: black;
  border-width: 0 0 3px 0;

  padding-bottom: 5%;
}

.map-hover-txt {
  width: 95%;

  font-style: italic;
  font-size: 20px;
  font-weight: 400;
}

/* Setting Overlay Displays to None, Will Display When Hovering Over Respective Checkpoints */
#front-hill-ol, #free-roll-ol, #schenley-ol, #chute-ol, #back-hill-ol {
  display: none;
}

/* Positions of Specific Checkpoint Markers */
#marker-one {
  right: 6%;
  top: 14%;
}

#marker-two {
  right: 35%;
  top: 80%;
}

#marker-three {
  right: 80%;
  top: 63%;
}

#marker-four {
  right: 88%;
  top: 20%;
}

#marker-five {
  right: 35%;
  top: 25%;
}

/* -------------------------------------------------------------------------------------------------------------- */
/* Buggy Course */
#buggy-course {
  background-color:skyblue;

  overflow-x: scroll;
  overflow-y: hidden;

  width: fit-content;
  height: 100vh;

  display: flex;
  flex-direction: column;

  box-sizing: border-box;

  justify-content: space-between;
} 

/* Header */
header {
  background-color: black;
  box-sizing: border-box;
  display: flex;
  flex-direction: row;

  position: fixed;
  width: 100vw;
  height: 10vh;

  padding: 1vh;

  justify-content: space-between;
}

#sweepstakes-logo-header {
  box-sizing: border-box;
  height: 100%;
  width: auto;

  flex-shrink: 0;
}

.position-animation {
  flex-grow: 1;

  /* background-color: #466db4; */
}

.location-txt {
  box-sizing: border-box;
  /* height: 100%; */
  padding-top: 2%;
  padding-bottom: 2%;
  
  text-align: center;
  font-size: 100%;
  font-weight: normal;
  color: white;

  padding-left: 1vw;
  padding-right: 1vw;
}

/* General Content Styling */
.display-content {
  box-sizing: border-box;

  margin-top: 10vh;
  margin-bottom: 20vh;
  /* padding-bottom: 22vh; */
  width: fit-content;
  height: 100%;
  display: flex;
  flex-direction: row;

  justify-content: space-around;
  background-color: #9ea295;

  overflow-x: scroll;
  overflow-y: hidden;

  /* Remove Bottom Scrollbar */
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

/* Removes bottom scrollbar from Display Content in Chrome, Opera, and Safari 
  Code Source: https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp*/
.display-content::-webkit-scrollbar {
  display: none; 
}

/* Styling for Section Title Divs */
.begin-section {
  box-sizing: border-box;
  width: 20vw;
  height: inherit;

  text-align: center;

  padding-left: 1%;
  padding-right: 1%;

  display: flex;
  flex-direction: column;

  justify-content: center;
  align-items: center;
}

.section-title {
  background-color: antiquewhite;
  box-sizing: border-box;

  width: fit-content;
  height: fit-content;

  padding: 2%;
  

  font-size: x-large;
  font-weight: bold;
}

.section-subtitle {
  padding: 2%;
  font-weight: 600;
}

/* Styling for Informational Divs */
.info-template {
  box-sizing: border-box;

  padding: 1%;
  width: fit-content;
  height: inherit;
  display: flex;
  flex-direction: row;

  justify-content: space-around;
  align-items: center;
  background-color:rgb(232, 232, 255);
}

iframe {
  margin-top: 10%;
  margin-bottom: 10%;
  max-height: 80%;
  min-width: 70%;
  width: auto;
  height: 80%;
}

.info-content {
  height: inherit;

  padding-left: 2%;
  padding-right: 2%;

  display: flex;
}

.info-title {
  font-size: larger;
  font-weight: bold;
  text-align: left;

  padding-bottom: 2%;
}

.info-img {
  /* height: 30%; */
  width: 80%;
  /* float: left; */

  padding-right: 2%;
  padding-left: 2%;
  padding-bottom: 2%;
}

.info-txt {
  box-sizing: border-box;
  height: inherit;
}

/*Styling for Featured Images and Associated Captions */
.img-and-caption {
  box-sizing: border-box;
  margin: auto;
  padding: 5%;
  /* background-color: crimson; */

  display: flex;
  flex-direction: column;
  align-items: center;

  height: 100%;

  text-align: center;
}

.img-caption {
  box-sizing: border-box;
  font-size: medium;
}

.img-caption-italics {
  box-sizing: border-box;
  font-size: medium;
  font-style: italic;
}

.img-name {
  box-sizing: border-box;
  font-size: large;
  font-weight: 600;
  text-decoration: underline solid black;
  padding: 2% 0%;
}

/* Featured Buggy Specific Stylings */
.featured-buggies {
  height: 75%;
}

/* Featured Teams Specific Stylings */
.team-logo {
  height: 70%;
}

.team-name {
  box-sizing: border-box;
  font-size: x-large;
  font-weight: 600;
  text-decoration: underline solid black;
  padding: 2% 0%;
}

.team-photo {
  box-sizing: border-box;
  height: 80%;
  margin: auto;
}

/* button styling */
.visit-team {
  box-sizing: border-box;

  margin-top: 5%;
  padding: 2%;

  font-size: 1.5em;
  font-weight: 600;

  color: black;
  background-color: ivory;

  border: none;
}

.visit-team:hover {
  background-color: lightgray;
}



/* ------------------------------------------------------------------------------------------------------- */
/* Buggy Overlay */
.buggy-road {
  box-sizing: border-box;
  position: fixed;
  /* overflow-y: hidden; */

  /* fixing div to bottom left corner */
  bottom: 0;
  left: 0;

  width: 100%;
  height: 20vh;

  /* background-color: #cad9a9; */
  display: flex;
  flex-direction: column;

  flex-grow: 1;
  margin-bottom: 0px;

  z-index: 10;
}

/* @media only screen and (max-device-width : 730px) {
  .buggy-road {
    position: fixed;
    bottom: 0;
    left: 0;   
  }
} */

#store-buggy-sprite {
  box-sizing: border-box;
  /* height: min-cont; */
  /* background-color: #466db4; */

  position: relative;
  height: 50%;
}

#buggy-ol {
  position: absolute;
  left: 0;
  bottom: 0;

  /* width: 200px; */
  height: 100%;
}

#road {
  background-color: #3b3b3b;
  width: inherit;
  height: 50%;

  position: absolute;
  left: 0;
  bottom: 0;
}

